--- a/checkout.html
+++ b/checkout.html
@@ -33,6 +33,14 @@
     <input type="hidden" name="amount" value="15.00">
     <input type="hidden" name="shipping" value="0.00">
     <input type="hidden" name="no_shipping" value="1">
+
+    <label for="size">Select Size:</label>
+    <select name="os0" id="size">
+            <option value="Small">Small</option>
+            <option value="Medium">Medium</option>
+            <option value="Large">Large</option>
+    </select>
+      
     <input type="hidden" name="return" value="http://www.nakka-rocketry.net/cdrom.html">
     <input type="hidden" name="cancel_return" value="http://www.nakka-rocketry.net/cdrom.html">
     <input type="hidden" name="cn" value="Comments are welcome:">
